<resources>
    <string name="app_name">Global Credence</string>
    <string name="title_activity_navigation_view">NavigationViewActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="title">School Management Sysytem</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Dashboard">Dashboard</string>
    <string name="My_Profile">My Profile</string>
    <string name="notifications">Notifications</string>
    <string name="institute_profile">Institute Profile</string>
    <string name="Fee_setup">Fee setUp</string>
    <string name="holiday_list">Holiday List</string>
    <string name="Schedule">Schedule</string>
    <string name="approvals">Approvals</string>
    <string name="attendece">Attendance</string>
    <string name="class_student">Class Student</string>
    <string name="examinations">Examinations</string>


    <!--    //toggle String-->

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="select_class">Select Class</string>
    <string name="attendece_date">Attendence Date</string>
    <string name="view">View</string>
    <string name="institute_name">Institute Name</string>
    <string name="class_attendance">Class Attendance</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetpassword">Forget Password ?</string>
    <string name="createaccount">Create an Account</string>
    <string name="passwordforget"> Forgot your password?\nEnter your email in the form below and \nwe\'ll send you instruction forceating a new one.</string>
    <string name="username">User name</string>
    <string name="cnfpassword">Password Confirmation</string>
    <string name="register">Register</string>
    <string name="loginExisituser">Login with existing account</string>
    <string name="resetlink">Send Reset Link</string>
    <string name="linkconfirmation">We have sent you an email with a link tto reset your password. Please check your email and click the link to countinue</string>
    <string name="login">Login Now</string>
    <string name="allstudent">"All Student of  "</string>
    <string name="default_notification_channel_id">default_channel_id</string>
</resources>