<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginScreen_bgcolor"
    android:orientation="vertical"
    tools:context="com.example.schoolManagement.Ui.Activity.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/side_nav_bar"
        android:gravity="center"
        android:padding="@dimen/dp10"
        android:text="Reset Account"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20"
        android:textStyle="bold" />
    <androidx.cardview.widget.CardView
        android:id="@+id/main_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp60"
        android:layout_marginLeft="@dimen/dp10"
        android:layout_marginRight="@dimen/dp10"
        app:cardElevation="@dimen/dp10"
        app:cardCornerRadius="@dimen/dp6"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dp20">

            <TextView
                android:id="@+id/txt_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passwordforget"
                android:textSize="@dimen/sp12"
                android:layout_marginTop="@dimen/dp80"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_forget_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp40"
                app:boxBackgroundColor="@color/softblue"
                app:boxBackgroundMode="none"
                android:layout_below="@+id/txt_instruction"
                app:hintTextColor="@color/softblue">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:id="@+id/txt_forget_email"
                android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/send_link_btn_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textField_forget_email"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp40"
                android:layout_marginRight="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp80"
                app:cardCornerRadius="@dimen/dp4"
                app:cardElevation="@dimen/dp10"
                app:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/send_link_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/side_nav_bar"
                    android:padding="10dp"
                    android:text="@string/resetlink"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp18" />
            </androidx.cardview.widget.CardView>



        </RelativeLayout>


    </androidx.cardview.widget.CardView>



</LinearLayout>